2010-01-05  Charlie Zender  <zender@uci.edu>

	* NCO 4.0.0 release procedure:
	Changes since nco-3_9_9: bilinear, fitting, chunking
	cd ~/nco;cvs tag -d nco-4_0_0;cvs tag -d nco-4_0_0-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.0 release"
	cvs tag -c nco-4_0_0;cvs tag -c nco-4_0_0-1

2009-12-10  Henry Butowsky  <henryb@hush.com> 

	* Added initialization to NULL of chunk sizes prs_arg.cnk_sz in
	ncap2.cc. This was causing a bug on CentOS builds.

2009-11-20  Henry Butowsky  <henryb@hush.com> 

	* Added to manual chapter on bilinear_interp_wrap()

2009-11-16  Henry Butowsky  <henryb@hush.com> 

	* Tidy ups in main() ncpdq/ncecat/ncflint/ncra/ncbo

2009-11-09  Henry Butowsky  <henryb@hush.com> 

	* Modify 'dsort(var,&var_mp)'
	if output file is netcdf4 then the created map is of type NC_UINT64 
	else it is of type NC_INT

	* Refactor all gsl_stats code -hnd_fnc_stat? So that
	the 'size_t n' argument is user input to functions

2009-11-07  Charlie Zender  <zender@uci.edu>

	* Verify nco_is_spc_in_crd_att() implementation on NARCCAP file

	* Add nco_is_spc_in_crd_att() to test whether variable is
	specified in "coordinates" attribute

	* Change sprintf() and scanf() formatting for nco_int from long to int

	* Implement empirical list of N-D coordinate "fixed" variables:
	lat, lon, lev, longxy, latixy

	* Change fixed variable exclusion condition from is_ncbo to
	is_rnk_prs_rth_opr()

2009-10-30  Charlie Zender  <zender@uci.edu>

	* #define NCO_INT NCO_TYP_INT instead of NCO_TYP_LONG
	Longs are 8-bytes on 64-bit systems, and NCO_INTs are always 4 bytes.
	Stuffing the 4 bytes into 8 bytes of RAM is harmless locally, and
	ensures the NCO code is robust in other ways. 
	However, it also seems to confuse/break DAP-handling of ints.
	
2009-10-29  Charlie Zender  <zender@uci.edu>

	* Add short option -6, and better document -6, --64, --64bit options

2009-10-21  Henry Butowsky  <henryb@hush.com> 

	* Ensure ncap2 compiles	with NCO_INT==NCO_TYP_INT. Affects